recent form update

--- a/mod2_solution/css/mod2_css.css
+++ b/mod2_solution/css/mod2_css.css
@@ -11,6 +11,8 @@ body{
 h1 {
   text-align:center;
   background-color: cadetblue;
+  height: 80px;
+  padding-top:20px;
 }
 section {
   background-color: grey;
